# AdaptiveSampling

./: .gitignore  CMakeLists.txt  GenerateProjectFiles.bat  README.md
DX12Lib/: CMakeLists.txt
DX12Lib/inc/dx12lib/: AccelerationStructure.h  CommandList.h  CommandQueue.h  DescriptorAllocatorPage.h  Device.h  DynamicDescriptorHeap.h  Helpers.h  MappableBuffer.h  Material.h  RT_PipelineStateObject.h  Resource.h  RootSignature.h  Scene.h  ShaderResourceView.h  ShaderTable.h  ShaderTableBuffer.h  Texture.h  UnorderedAccessView.h
DX12Lib/inc/imgui/: imgui.h  imstb_truetype.h
DX12Lib/src/: AccelerationStructure.cpp  CommandList.cpp  Device.cpp  DynamicDescriptorHeap.cpp  IndexBuffer.cpp  MappableBuffer.cpp  Material.cpp  RT_PipelineStateObject.cpp  RenderTarget.cpp  Resource.cpp  RootSignature.cpp  Scene.cpp  ShaderTable.cpp  ShaderTableBuffer.cpp  Texture.cpp
DX12Lib/src/imgui/: imgui.cpp  imgui_demo.cpp  imgui_widgets.cpp
RTRTprojects/Playground/: CMakeLists.txt
RTRTprojects/Playground/inc/: DummyGame.h
RTRTprojects/Playground/shaders/: Denoiser.hlsl  Pixel.hlsl  PostProcess.hlsl  RayScheduler.hlsl  RayTracer.hlsl  SVGF_atrous.hlsl  SVGF_moments.hlsl  SVGF_reprojection.hlsl
RTRTprojects/Playground/src/: DummyGame.cpp  main.cpp
RTRTprojects/RayTray/: RayTray.vcxproj.user.in
RTRTprojects/RayTray/inc/: DummyGame.h
RTRTprojects/RayTray/shaders/: Pixel.hlsl  RayTracer.hlsl  Vertex.hlsl
RTRTprojects/RayTray/src/: DummyGame.cpp  main.cpp
projects/Playground/: CMakeLists.txt
projects/Playground/inc/: DummyGame.h
projects/Playground/shaders/: PostProcess.hlsl
projects/Playground/src/: DummyGame.cpp  main.cpp
projects/RayTray/: CMakeLists.txt
samples/05-Models/shaders/: Base_PS.hlsli
samples/05-Models/src/: SceneVisitor.cpp  Tutorial5.cpp
